[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/UI/IntegerLineEdit.gd" type="Script" id=1]
[ext_resource path="res://Scripts/UI/SettingsPage.gd" type="Script" id=2]
[ext_resource path="res://Fonts/FontNormal.tres" type="DynamicFont" id=3]
[ext_resource path="res://Art/UI/hover.png" type="Texture" id=4]
[ext_resource path="res://Fonts/alagard.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonPressed.tres" type="StyleBox" id=6]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonHover.tres" type="StyleBox" id=7]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonNormal.tres" type="StyleBox" id=8]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 5 )

[node name="SettingsPage" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -215.0
margin_top = -176.5
margin_right = 215.0
margin_bottom = 176.5
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 7, 7 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 4
patch_margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -182.0
margin_top = -143.5
margin_right = 167.0
margin_bottom = 144.5
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBox"]
margin_right = 349.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Settings"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundSlider" type="HBoxContainer" parent="VBox"]
margin_top = 48.0
margin_right = 349.0
margin_bottom = 67.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBox/SoundSlider"]
margin_left = 4.0
margin_right = 141.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sound Volume:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="VBox/SoundSlider"]
margin_left = 145.0
margin_right = 345.0
margin_bottom = 19.0
rect_min_size = Vector2( 200, 19 )
custom_styles/slider = ExtResource( 7 )
custom_styles/grabber_area_highlight = ExtResource( 6 )
custom_styles/grabber_area = ExtResource( 8 )
min_value = -50.0
max_value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicSlider" type="HBoxContainer" parent="VBox"]
margin_top = 77.0
margin_right = 349.0
margin_bottom = 96.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBox/MusicSlider"]
margin_left = 6.0
margin_right = 139.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Music Volume:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="VBox/MusicSlider"]
margin_left = 143.0
margin_right = 343.0
margin_bottom = 19.0
rect_min_size = Vector2( 200, 19 )
custom_styles/slider = ExtResource( 7 )
custom_styles/grabber_area_highlight = ExtResource( 6 )
custom_styles/grabber_area = ExtResource( 8 )
min_value = -50.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="HBoxContainer" parent="VBox"]
margin_top = 106.0
margin_right = 349.0
margin_bottom = 129.0
alignment = 1

[node name="Label" type="Label" parent="VBox/Username"]
margin_left = 46.0
margin_top = 2.0
margin_right = 149.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Username: "

[node name="LineEdit" type="LineEdit" parent="VBox/Username"]
margin_left = 153.0
margin_right = 303.0
margin_bottom = 23.0
rect_min_size = Vector2( 150, 0 )
custom_styles/read_only = ExtResource( 7 )
custom_styles/focus = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 3 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/minimum_spaces = 0

[node name="NumDraft" type="HBoxContainer" parent="VBox"]
margin_top = 139.0
margin_right = 349.0
margin_bottom = 162.0

[node name="Label" type="Label" parent="VBox/NumDraft"]
margin_top = 2.0
margin_right = 265.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Number of Players in Draft: "

[node name="LineEdit" type="LineEdit" parent="VBox/NumDraft"]
margin_left = 269.0
margin_right = 345.0
margin_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/read_only = ExtResource( 7 )
custom_styles/focus = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 3 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
script = ExtResource( 1 )

[node name="Anims" type="HBoxContainer" parent="VBox"]
visible = false
margin_top = 172.0
margin_right = 349.0
margin_bottom = 196.0
alignment = 1

[node name="Label" type="Label" parent="VBox/Anims"]
margin_left = 82.0
margin_top = 2.0
margin_right = 238.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Play Animations: "
valign = 1

[node name="CheckBox" type="CheckBox" parent="VBox/Anims"]
margin_left = 242.0
margin_right = 266.0
margin_bottom = 24.0

[node name="Shaders" type="HBoxContainer" parent="VBox"]
margin_top = 172.0
margin_right = 349.0
margin_bottom = 195.0
alignment = 1

[node name="Label" type="Label" parent="VBox/Shaders"]
margin_top = 2.0
margin_right = 76.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Shader: "

[node name="SelectShaderButton" type="Button" parent="VBox/Shaders"]
margin_left = 80.0
margin_right = 210.0
margin_bottom = 23.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Select Shader"

[node name="Control" type="Control" parent="VBox/Shaders"]
margin_left = 214.0
margin_right = 214.0
margin_bottom = 23.0

[node name="Control2" type="Control" parent="VBox/Shaders"]
margin_left = 218.0
margin_right = 218.0
margin_bottom = 23.0

[node name="Control3" type="Control" parent="VBox/Shaders"]
margin_left = 222.0
margin_right = 222.0
margin_bottom = 23.0

[node name="Control4" type="Control" parent="VBox/Shaders"]
margin_left = 226.0
margin_right = 226.0
margin_bottom = 23.0

[node name="Control5" type="Control" parent="VBox/Shaders"]
margin_left = 230.0
margin_right = 230.0
margin_bottom = 23.0

[node name="ShaderFolderButton" type="Button" parent="VBox/Shaders"]
margin_left = 234.0
margin_right = 349.0
margin_bottom = 23.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Open Folder"

[node name="Control" type="Control" parent="VBox"]
margin_top = 205.0
margin_right = 349.0
margin_bottom = 205.0

[node name="Control2" type="Control" parent="VBox"]
margin_top = 215.0
margin_right = 349.0
margin_bottom = 215.0

[node name="BackButton" type="Button" parent="VBox"]
margin_top = 225.0
margin_right = 349.0
margin_bottom = 248.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDisplay" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MouseDisable" type="ColorRect" parent="FileDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1024.0
margin_top = -1024.0
margin_right = 1024.0
margin_bottom = 1024.0
rect_min_size = Vector2( 2048, 2048 )
color = Color( 0.313726, 0.0509804, 0.698039, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="FileDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -50.0
margin_right = -14.0
margin_bottom = 3.0
texture = ExtResource( 4 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonHolder" type="VBoxContainer" parent="FileDisplay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -65.0
margin_right = 120.0
margin_bottom = 25.0
custom_constants/separation = 8
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FileDisplay/ButtonHolder"]
margin_top = 19.0
margin_right = 280.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="BackButton" type="Button" parent="FileDisplay/ButtonHolder"]
margin_top = 46.0
margin_right = 280.0
margin_bottom = 71.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Back"

[connection signal="value_changed" from="VBox/SoundSlider/HSlider" to="." method="onSoundVolumeChange"]
[connection signal="value_changed" from="VBox/MusicSlider/HSlider" to="." method="onMusicVolumeChange"]
[connection signal="text_changed" from="VBox/NumDraft/LineEdit" to="VBox/NumDraft/LineEdit" method="_on_LineEdit_text_changed"]
[connection signal="toggled" from="VBox/Anims/CheckBox" to="." method="setPlayAnims"]
[connection signal="pressed" from="VBox/Shaders/SelectShaderButton" to="." method="shaderButtonPressed"]
[connection signal="pressed" from="VBox/Shaders/ShaderFolderButton" to="." method="openShaderFolder"]
[connection signal="pressed" from="VBox/BackButton" to="." method="onBackPressed"]
[connection signal="pressed" from="FileDisplay/ButtonHolder/BackButton" to="." method="onShaderBackButtonPressed"]
